[tool.poetry]
name = "temporal difference learning"
version = "0.1.0"
description = "Project meant to compare Q-Learning, Dyna-Q and Dyna-Q+ on a changing Grid World environment"
authors = ["Ryan Pégoud <ryanpegoud@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
numpy = "^1.24.3"
plotly = "^5.15.0"
tqdm = "^4.65.0"
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.272"
poethepoet = "^0.20.0"
pytest = "^7.3.2"
nbformat = "^5.9.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[tool.ruff]
extend-ignore = ["E501"]
extend-exclude = ["__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format = { cmd = "black .", help = "Check code style and format it" }
format_imports = { cmd = "isort .", help = "Sort imports" }
lint = { cmd = "ruff check . --fix", help = "Perform linting on your code" }
format_and_lint = ["format", "format_imports", "lint"]